--- a/style.css
+++ b/style.css
@@ -28,14 +28,16 @@ body {
   border-radius: 8px;
   color:hsl(208, 100%, 97%);
   background-color: hsl(180, 100%, 50%);
+  opacity: 0;
   transform: translateX(200%);
-  transition: transform 0.4s ease;
+  transition: transform 0.4s ease, opacity 0.5s ease-in-out;
 } 
 
 .content:nth-of-type(even) {
   transform: translateX(-200%);
 }
 
-.content--show {
+.content.content--show {
   transform: translateX(0);
+  opacity: 1;
 }
